// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen Component renders correctly 1`] = `
<ScrollView
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
  testID="home-screen"
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <Header
      getImageDetails={[MockFunction]}
      headerBanners={
        Array [
          Object {
            "contentType": "headerBanner",
            "fields": Object {
              "backgroundColour": "#ff0000",
              "heading": "heading",
              "headingLine2": "headingLine2",
              "heroImage": Object {
                "sys": Object {
                  "id": "un",
                },
              },
              "subHeading": "subHeading",
            },
            "id": "g3QY",
            "locale": "en-GB",
            "revision": 1,
          },
          Object {
            "contentType": "headerBanner",
            "fields": Object {
              "backgroundColour": "#ff0000",
              "heading": "heading",
              "headingLine2": "headingLine2",
              "heroImage": Object {
                "sys": Object {
                  "id": "5CL1KU8X302K1Z5z8dNUPMs5c4aS0",
                },
              },
              "subHeading": "subHeading",
            },
            "id": "G36Nw4N4Qb1HE305M0V",
            "locale": "en-GB",
            "revision": 1,
          },
        ]
      }
      navigation={
        Object {
          "navigate": [MockFunction],
        }
      }
    />
    <ContentPadding
      padding={Object {}}
      style={
        Object {
          "alignSelf": "center",
          "maxWidth": 440,
        }
      }
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 12,
          }
        }
      >
        <Text
          color="blackColor"
          markdown={false}
          markdownStyle={Object {}}
          style={
            Object {
              "color": "rgb(45, 47, 127)",
            }
          }
          type="h2"
        >
          Featured events
        </Text>
        <Touchable
          accessibilityComponentType="button"
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          delayPressIn={50}
          onPress={[Function]}
          testID="view-all"
        >
          <TextLink>
            View all
          </TextLink>
        </Touchable>
      </Component>
      <Component
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Component
          key="K8pft"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-0"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Film and Screenings",
                  "Nightlife",
                  "Music",
                  "Exhibition and Tours",
                  "Sports and Activities",
                ]
              }
              imageReference={
                Object {
                  "sys": Object {
                    "id": "sD7CKhNJ85Q1A5msV33d6z2ZOpt",
                  },
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="r1QiIwgIQ7X60Q2aWr4FmDvRw"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-1"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Social and Networking",
                  "Music",
                  "Sports and Activities",
                ]
              }
              imageReference={
                Object {
                  "sys": Object {
                    "id": "i1rG1R19dEi3GJXGmftzSR0C",
                  },
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="67Jac7w2DoNB0lcPhi82xV84"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-2"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Plays and Theatre",
                  "Sports and Activities",
                  "Film and Screenings",
                  "Talks and Debates",
                ]
              }
              imageReference={
                Object {
                  "sys": Object {
                    "id": "b9VUE8Pmwhi0JXmZWqL",
                  },
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="gH51Ec3MDIb"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-3"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Exhibition and Tours",
                ]
              }
              imageReference={
                Object {
                  "sys": Object {
                    "id": "ZeRTx8wCF",
                  },
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
      </Component>
    </ContentPadding>
  </Component>
</ScrollView>
`;

exports[`HomeScreen Component renders max 6 events 1`] = `
<ScrollView
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
  testID="home-screen"
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <Header
      getImageDetails={[MockFunction]}
      headerBanners={
        Array [
          Object {
            "contentType": "headerBanner",
            "fields": Object {
              "backgroundColour": "#ff0000",
              "heading": "heading",
              "headingLine2": "headingLine2",
              "heroImage": Object {
                "sys": Object {
                  "id": "un",
                },
              },
              "subHeading": "subHeading",
            },
            "id": "g3QY",
            "locale": "en-GB",
            "revision": 1,
          },
          Object {
            "contentType": "headerBanner",
            "fields": Object {
              "backgroundColour": "#ff0000",
              "heading": "heading",
              "headingLine2": "headingLine2",
              "heroImage": Object {
                "sys": Object {
                  "id": "5CL1KU8X302K1Z5z8dNUPMs5c4aS0",
                },
              },
              "subHeading": "subHeading",
            },
            "id": "G36Nw4N4Qb1HE305M0V",
            "locale": "en-GB",
            "revision": 1,
          },
        ]
      }
      navigation={
        Object {
          "navigate": [MockFunction],
        }
      }
    />
    <ContentPadding
      padding={Object {}}
      style={
        Object {
          "alignSelf": "center",
          "maxWidth": 440,
        }
      }
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 12,
          }
        }
      >
        <Text
          color="blackColor"
          markdown={false}
          markdownStyle={Object {}}
          style={
            Object {
              "color": "rgb(45, 47, 127)",
            }
          }
          type="h2"
        >
          Featured events
        </Text>
        <Touchable
          accessibilityComponentType="button"
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          delayPressIn={50}
          onPress={[Function]}
          testID="view-all"
        >
          <TextLink>
            View all
          </TextLink>
        </Touchable>
      </Component>
      <Component
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Component
          key="K8pft"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-0"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Film and Screenings",
                  "Nightlife",
                  "Music",
                  "Exhibition and Tours",
                  "Sports and Activities",
                ]
              }
              imageReference={
                Object {
                  "sys": Object {
                    "id": "sD7CKhNJ85Q1A5msV33d6z2ZOpt",
                  },
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="r1QiIwgIQ7X60Q2aWr4FmDvRw"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-1"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Social and Networking",
                  "Music",
                  "Sports and Activities",
                ]
              }
              imageReference={
                Object {
                  "sys": Object {
                    "id": "i1rG1R19dEi3GJXGmftzSR0C",
                  },
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="67Jac7w2DoNB0lcPhi82xV84"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-2"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Plays and Theatre",
                  "Sports and Activities",
                  "Film and Screenings",
                  "Talks and Debates",
                ]
              }
              imageReference={
                Object {
                  "sys": Object {
                    "id": "b9VUE8Pmwhi0JXmZWqL",
                  },
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="gH51Ec3MDIb"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-3"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Cabaret and Variety",
                  "Exhibition and Tours",
                ]
              }
              imageReference={
                Object {
                  "sys": Object {
                    "id": "ZeRTx8wCF",
                  },
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="5n22QycLpKe1o"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-4"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Film and Screenings",
                  "Music",
                  "Talks and Debates",
                ]
              }
              imageReference={
                Object {
                  "sys": Object {
                    "id": "3FVY9BK0i55WU3kG",
                  },
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
        <Component
          key="b6wZbwMDTlXYK5j"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "flex": 1,
                "justifyContent": "flex-start",
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-5"
          >
            <EventTile
              date="2018-07-07T00:00+00:00"
              eventCategories={
                Array [
                  "Plays and Theatre",
                  "Cabaret and Variety",
                  "Community",
                  "Social and Networking",
                ]
              }
              imageReference={
                Object {
                  "sys": Object {
                    "id": "kyr7K991ry2cm2h6vJUr",
                  },
                }
              }
              name="name"
            />
          </Touchable>
        </Component>
      </Component>
    </ContentPadding>
  </Component>
</ScrollView>
`;
